--- a/amplify.yml
+++ b/amplify.yml
@@ -8,12 +8,16 @@ backend:
         - amplifyPush --simple
 frontend:
   phases:
+    preBuild: 
+      commands: 
+        - npm install
     build:
-      commands: npm run build
+      commands: 
+        - npm run build
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: dist
+    baseDirectory: /dist
     files:
       - '**/*'
   cache:
-    paths: []
+    paths: node_modules/**/*
