added auth functions.

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -104,5 +104,71 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     }
+  },
+  "parameters": {
+    "AMPLIFY_function_AdminQueries939bad81_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "AdminQueries939bad81"
+        }
+      ]
+    },
+    "AMPLIFY_function_AdminQueries939bad81_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "AdminQueries939bad81"
+        }
+      ]
+    },
+    "AMPLIFY_function_amplifytest27f936beCustomMessage_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "amplifytest27f936beCustomMessage"
+        }
+      ]
+    },
+    "AMPLIFY_function_amplifytest27f936beCustomMessage_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "amplifytest27f936beCustomMessage"
+        }
+      ]
+    },
+    "AMPLIFY_function_amplifytest27f936bePostConfirmation_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "amplifytest27f936bePostConfirmation"
+        }
+      ]
+    },
+    "AMPLIFY_function_amplifytest27f936bePostConfirmation_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "amplifytest27f936bePostConfirmation"
+        }
+      ]
+    },
+    "AMPLIFY_function_amplifytest27f936bePreSignup_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "amplifytest27f936bePreSignup"
+        }
+      ]
+    },
+    "AMPLIFY_function_amplifytest27f936bePreSignup_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "amplifytest27f936bePreSignup"
+        }
+      ]
+    }
   }
 }
