[UPDATE] auth func of frontend env

--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/credential-provider-imds": "^3.310.0",
+    "aws-amplify": "^5.0.25",
+    "aws-amplify-react": "^5.1.43",
+    "aws-sdk": "^2.1354.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@aws-amplify/ui-react": "^4.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
