--- a/amplify.yml
+++ b/amplify.yml
@@ -5,7 +5,7 @@ backend:
     build:
       commands:
         - '# Execute Amplify CLI with the helper script'
-        - amplifyPush --simple
+        #- amplifyPush --simple
 frontend:
   phases:
     preBuild: 
