--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "dependencies": {
     "@aws-sdk/credential-provider-imds": "^3.310.0",
-    "aws-amplify": "^5.0.25",
+    "aws-amplify": "^5.1.1",
     "aws-amplify-react": "^5.1.43",
     "aws-sdk": "^2.1354.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@aws-amplify/ui-react": "^4.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "amplify": "^0.0.11",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
